--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-{{ include("Parts/_header.html.twig") }}
+{{ include("Parts/_main_header.html.twig") }}
 
 <!-- Page Content -->
 <div class="container-fluid">
