--- a/templates/Trick/comments_load.html.twig
+++ b/templates/Trick/comments_load.html.twig
@@ -9,7 +9,7 @@
                     <div class="entry-comments-item">
                         <div class="entry-comments-body">
                             <p>
-                            <img class="rounded" src="http://localhost/OCR-P6/public/img/users/{{ comment.user.avatar }}" height="40" width="40" alt="{{ comment.user.username }}" /><br/>
+                            <img class="rounded" src="../assets/img/users/{{ comment.user.avatar }}" height="40" width="40" alt="{{ comment.user.username }}" /><br/>
                             <span class="entry-comments-author"><strong>Posté par <a class="text-dark" href="{{ path('app_trick_view', { 'id' : comment.user.id }) }}" target="_blank">{{ comment.user.username }}</a></strong>, </span>
                             <span class="comment-date text-dark">le {{ comment.dateAdd | date('d/m/Y') }} à {{ comment.dateAdd | date('H:i') }}</span>
                             </p> 
