--- a/templates/Trick/edit.html.twig
+++ b/templates/Trick/edit.html.twig
@@ -5,58 +5,8 @@
 {% block body %}
 
     <!--Header start-->
-        <div class="header">    
-            <div class="header-content clearfix">
-                <div class="nav-control">
-                    <div class="hamburger">
-                        <span class="toggle-icon"><i class="icon-menu"></i></span>
-                    </div>
-                </div>
-                <div class="header-right">
-                    <ul class="clearfix">
-                        <li class="icons dropdown">
-                            <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
-                                <span class="activity active"></span>
-                                <a href="{{ path('app_user_edit', {'id': app.user.id }) }}" aria-expanded="false">
-                                <img src="http://localhost/OCR-P6/public/img/users/{{ app.user.avatar }}" height="40" width="40" alt="utilisateur">
-                                </a>
-                            </div>
-                            <div class="drop-down dropdown-profile dropdown-menu">
-                                <div class="dropdown-content-body">
-                                    <ul>
-                                        <li>
-                                            <a href="{{ path('app_user_edit', {'id': app.user.id }) }}"><i class="icon-user"></i> <span>Profil</span></a>
-                                        </li>
-                                        <li>
-                                            <a href="#"><i class="icon-lock"></i> <span>Mot de passe</span></a>
-                                        </li>                        
-                                        <hr class="my-2">
-                                        <li>
-                                            <a href="{{ path('app_user_logout') }}"><i class="icon-key"></i> <span>Déconnexion</span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!--Header end-->
-
-        <!-- Nav header start-->
-        <div class="nav-header">
-            <div class="brand-logo">
-                <a href="{{ path('app_trick_home') }}">
-                    <b class="logo-abbr"><img src="../uploads/images/defaults/snowboard.jpg" alt="logo"> </b>
-                    <span class="logo-compact"><img src="./images/logo-compact.png" alt=""></span>
-                    <span class="brand-title">
-                        <img src="images/logo-text.png" alt="">
-                    </span>
-                </a>
-            </div>
-        </div>
-        <!--Nav header end-->
+        {{ include("Parts/_account_header.html.twig") }}
+    <!--Header end-->
 
         <!--Main section-->
 
@@ -74,7 +24,7 @@
         <!--Main-Section-End-->
 
         <!--Sidebar start-->
-        {{ include("Parts/_sidebar.html.twig") }}
+            {{ include("Parts/_sidebar.html.twig") }}
         <!--end-sidebar-->
 
 {% endblock %}
