--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
             <!-- Font Awesome -->
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
             <!-- Quixlab-master Styles -->
-            <link href="http://localhost/OCR-P6/assets/css/style.css" rel="stylesheet">
+            {# <link href="http://localhost/OCR-P6/assets/css/style.css" rel="stylesheet"> #}
             <!-- Custom CSS -->
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
