--- a/templates/Parts/_main_header.html.twig
+++ b/templates/Parts/_main_header.html.twig
@@ -3,7 +3,9 @@
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light fixed-top" style="opacity: 0.9; box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);">
     <div class="container">
-      <img class="img-fluid text-center" src="{{ asset('../assets/img/design/snowtricks-logo.png') }}" width="100" alt="SnowTricks-Logo">
+      <a href="{{ path('app_trick_home') }}">
+        <img class="img-fluid text-center" src="{{ asset('../assets/img/design/snowtricks-logo.png') }}" width="100" alt="SnowTricks-Logo">
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-dark"></span>
       </button>
