--- a/templates/Parts/_main_header.html.twig
+++ b/templates/Parts/_main_header.html.twig
@@ -36,7 +36,7 @@
                             <a href="{{ path('app_user_edit', {'id': app.user.id }) }}"><i class="icon-user"></i> <span>Mon Profil</span></a>
                           </li>
                           <li>
-                            <a href="#"><i class="icon-lock"></i> <span>Mon mot de passe</span></a>
+                            <a href="{{ path('app_user_password') }}"><i class="icon-lock"></i> <span>Mon mot de passe</span></a>
                           </li>                        
                             <hr class="my-2">
                           <li>
