--- a/templates/Parts/_sidebar.html.twig
+++ b/templates/Parts/_sidebar.html.twig
@@ -13,7 +13,7 @@
                 </li>
                 <hr class="my-2">
                 <li>
-                    <a href="#" aria-expanded="false">
+                    <a href="{{ path('app_user_password') }}" aria-expanded="false">
                         <i class="icon-lock menu-icon"></i><span class="nav-text">Mon mot de passe</span>
                     </a>
                 </li>
