--- a/templates/Trick/_form.html.twig
+++ b/templates/Trick/_form.html.twig
@@ -71,7 +71,12 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
+                <div class="row mb-4 text-center">
+                        <div class="col-12 text-center">
+                            <button class="btn-primary btn-lg center-block text-uppercase" href="{{ path('app_trick_add') }}">Ajouter la figure</button>
+                        </div>
+                    </div>
                 </div>
                 {{ form_end(form) }}
             </div>
