--- a/templates/Parts/_account_header.html.twig
+++ b/templates/Parts/_account_header.html.twig
@@ -24,7 +24,7 @@
                                             <a href="{{ path('app_user_edit', {'id': app.user.id }) }}"><i class="icon-user"></i> <span>Profil</span></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="icon-lock"></i> <span>Mot de passe</span></a>
+                                            <a href="{{ path('app_user_password') }}"><i class="icon-lock"></i> <span>Mot de passe</span></a>
                                         </li>                        
                                         <hr class="my-2">
                                         <li>
