--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,45 +29,41 @@
         <div class="card-body">
 
         <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                Vous êtes connecté comme {{ app.user.username }}, <a href="{{ path('app_user_logout') }}">Déconnexion</a>
+            {% if app.user %}
+                <div class="mb-3">
+                    Vous êtes connecté comme {{ app.user.username }}, <a href="{{ path('app_user_logout') }}">Déconnexion</a>
+                </div>
+            {% endif %}
+
+            <label for="inputUsername">Nom d'utilisateur</label>
+            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
+            <label for="inputPassword">Password</label>
+            <input type="password" name="password" id="inputPassword" class="form-control" required>
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+            <div class="checkbox my-3 mx-2">
+                <label>
+                    <input type="checkbox" name="_remember_me">  Se souvenir
+                </label>
             </div>
-        {% endif %}
 
-        <label for="inputUsername">Nom d'utilisateur</label>
-        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
-        <label for="inputPassword">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" required>
-
-        <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-        >
-
-    <div class="checkbox my-3 mx-2">
-        <label>
-            <input type="checkbox" name="_remember_me">  Se souvenir
-        </label>
-    </div>
-
-    <div class="row my-2">
-        <div class="col-lg-12 text-center">
-            <button class="btn btn-lg btn-primary" type="submit">
-                Se connecter
-            </button>
-        </div>
-    </div>
-
-</form>
+            <div class="row my-2">
+                <div class="col-lg-12 text-center">
+                    <button class="btn btn-lg btn-primary" type="submit">
+                        Se connecter
+                    </button>
+                </div>
+            </div>
+        </form>
 
         <p class="text-center">
-            {# <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br> #}
-            <a href="#">Mot de passe oublié ?</a><br>
-            <a href="{{ path('app_user_register') }}">S'inscrire</a>
+          <a href="{{ path('app_account_forgot') }}">Mot de passe oublié ?</a><br>
+          <a href="{{ path('app_user_register') }}">S'inscrire</a>
         </p>
       </div>
     </div>
