--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -32,11 +32,18 @@
       <a href="javascript:;" id="scrollToBottom"><i class="fa fa-arrow-circle-down fa-3x"></i></a>
   </p>
   <!-- Tricks Section -->
+    {% if app.user %}
+      {% for trick in app.user.nonDeletedTricks %}
+        <p class="text-center">({{ app.user.nonDeletedTricks|length }} tricks)</p>
+      {% endfor %} 
+    {% endif %}
+
     <div class="row text-center" id="trickSection">
-      {% for trick in tricks %}
+    {% for trick in tricks %}
         <div class="col-lg-2 col-md-5 col-xs-12 my-4 mx-4">
           <div class="card h-100">
             <h4 class="card-header">{{ trick.name }}</h4>
+            {# <small>({{ app.user.nonDeletedTricks|length }} tricks)</small> #}
               {% if app.user %}
               <div class="float-right">
                 <a href="{{ path('app_trick_edit', {'id': trick.id }) }}">
@@ -56,7 +63,7 @@
             </div>
           </div>
         </div>
-      {% endfor %} 
+    {% endfor %} 
     </div>
 
   <!-- Call to Action Section -->
